--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --color-primary: #3BB77E;
   --color-secondary: #253D4E;
   --color-accent: #7E7E7E;
+  --color-lightGreen:#BCE3C9
 
 
 
@@ -30,4 +31,17 @@
     font-style: bold;
     color: var(--color-secondary);
   }
+  
+  .action-button {
+    width: 18px;
+    color:var(--color-secondary );
+  }
+ .action-button-text {
+  font-family: var(--font-lato);
+  font-size: 12px;
+  font-weight: 400;
+  color: var(--color-accent);
+  padding-left:2px;
+}
+
 }
