--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,21 +1,17 @@
-/* Change pagination dot color
+/* Change pagination dot color */
 .swiper-pagination-bullet {
   background-color: #3BB77E;
-} */
+} 
 
 /* Active pagination dot color */
-/* .swiper-pagination-bullet-active {
+.swiper-pagination-bullet-active {
   background-color: #3BB77E;
-} */
+}
 
 /* Change navigation arrow color */
-/* .swiper-button-next,
+.swiper-button-next,
 .swiper-button-prev {
   color: #3BB77E;
-} */
-
-/* Optional: Change arrow background on hover */
-/* .swiper-button-next:after,
-.swiper-button-prev:after {
-  font-size: 24px;
-} */
+  width: 24px;
+  height: 24px;
+}
