--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@
   --color-accent: #7E7E7E;
   --color-lightGreen:#BCE3C9;
   --color-lightGray:#B6B6B6;
-  --color-borderColor:#ECECEC;
+  --color-lightCream:#F6F0D7;
   /* ✅ Custom Spacing / Radius */
   --radius-main: 1rem;
   --section-padding: 4rem;
