--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,22 +1,15 @@
 /* Change pagination dot color */
 .swiper-pagination-bullet {
   background-color: #3BB77E;
-} 
+}
 
 /* Active pagination dot color */
 .swiper-pagination-bullet-active {
-/* Active pagination dot color */ */
- .swiper-pagination-bullet-active {
   background-color: #3BB77E;
 }
 
 /* Change navigation arrow color */
 .swiper-button-next,
-.swiper-button-prev {
-  color: #3BB77E;
-  width: 24px;
-  height: 24px;
- .swiper-button-next,
 .swiper-button-prev {
   color: #c97b15;
 }
@@ -26,11 +19,10 @@
 .swiper-button-prev:after {
   font-size: 24px;
   color: #c97b15;
-
 }
 
-
-.custom-next, .custom-prev {
+.custom-next,
+.custom-prev {
   color: #c97b15;
   background: #fff;
   border-radius: 50%;
@@ -40,4 +32,13 @@
   align-items: center;
   justify-content: center;
 }
-}}
+
+/* Hide scrollbar for categories section */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
