--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,11 +1,11 @@
 /* Change pagination dot color */
 .swiper-pagination-bullet {
-  background-color: #3BB77E;
+  background-color: #2ed688 !important;
 }
 
 /* Active pagination dot color */
 .swiper-pagination-bullet-active {
-  background-color: #3BB77E;
+  background-color: #3BB77E !important;
 }
 
 /* Change navigation arrow color */
@@ -14,24 +14,7 @@
   color: #c97b15;
 }
 
-/* Optional: Change arrow background on hover */
-.swiper-button-next:after,
-.swiper-button-prev:after {
-  font-size: 24px;
-  color: #c97b15;
-}
 
-.custom-next,
-.custom-prev {
-  color: #c97b15;
-  background: #fff;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
 
 /* Hide scrollbar for categories section */
 .scrollbar-hide::-webkit-scrollbar {
